bugfix: video size on small screen

--- a/source/stylesheets/pages/video.scss
+++ b/source/stylesheets/pages/video.scss
@@ -1,6 +1,6 @@
 .width-video {
   @media(max-width: 2000px) {
-    width: 500px;
+    width: 505px;
   }
   @media(max-width: 500px) {
     width: 450px;
